name:                e2e-tests
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/e2e-tests#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2023 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     CHANGELOG.md

executable e2e-tests
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:
                       Cases.RendersAButton
                     , Cases.BasicsAndAttributes
                     , Cases.Counter
                     , Cases.TextInput
                     , Cases.Weather
                     , Cases.BlurAndChange
                     , Cases.NestedStates
                     , Cases.BubblingEvents
                     , Cases.JavascriptEventProducer
                     , Cases.JavascriptEventReceiver
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , warp
                     , wai
                     , purview
                     , websockets
                     , wai-websockets
                     , http-types
                     , bytestring
                     , text
                     , req
                     , aeson
                     , raw-strings-qq
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
